syntax = "proto3";

package payment;

option go_package = "proto/payment";

import "google/protobuf/timestamp.proto";

// Value object for money in minor units
message Money {
  int64 amount = 1;   // amount in minor units (e.g., cents)
  string currency = 2; // ISO 4217 (e.g., "USD")
}

// Payment Service
service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
}

// Domain Models
message Payment {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  Money amount = 4;
  PaymentStatus status = 5;
  PaymentMethod method = 6;
  string transaction_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

enum PaymentStatus {
  PAYMENT_PENDING = 0;
  PAYMENT_PROCESSING = 1;
  PAYMENT_COMPLETED = 2;
  PAYMENT_FAILED = 3;
  PAYMENT_REFUNDED = 4;
}

enum PaymentMethod {
  CREDIT_CARD = 0;
  DEBIT_CARD = 1;
  PAYPAL = 2;
  BANK_TRANSFER = 3;
}

// Request/Response Messages
message ProcessPaymentRequest {
  string order_id = 1;
  string user_id = 2;
  Money amount = 3;
  PaymentMethod method = 4;
  PaymentDetails details = 5;
}

message PaymentDetails {
  string card_number = 1;
  string card_holder = 2;
  string expiry_month = 3;
  string expiry_year = 4;
  string cvv = 5;
}

message ProcessPaymentResponse {
  Payment payment = 1;
  bool success = 2;
  string message = 3;
}

message GetPaymentRequest {
  string id = 1;
}

message GetPaymentResponse {
  Payment payment = 1;
}

message RefundPaymentRequest {
  string payment_id = 1;
  Money amount = 2;
  string reason = 3;
}

message RefundPaymentResponse {
  Payment payment = 1;
  bool success = 2;
  string message = 3;
}


